@@ -1,5 +1,6 @@
 2013-05-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Handle tilde (~) in database paths and report urls
+	* src/compare_db.c: adjusted report layout
 
 2013-05-14	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/db.c: fixed segfault when dbconf->db_out is NULL
